Add VSCode setup instructions for OrganizeMe
Added VSCode configuration instructions for running the OrganizeMe application.